# hscalc

./: README.debian  build.bat  configure.bat  doc.bat  doc.tex  hcalc.cabal  hscalc.cabal  install.bat
data/: about.glade  window.glade
debian/: changelog  control  copyright  rules
src/: Controller.lhs  StackCalc.lhs  Vista.lhs  main.lhs  stackcalc.lhs
