Name:       hsCalc
Version:    0.3.0
License:    GPL
License-File: gpl-3.0.txt
Author:     Luis Cabellos
Synopsis:   Stack Calculator writen in Haskell 
Build-Depends: base -any, gtk >0.9, glade >0.9
data-files: data/window.glade

Executable: hscalc
Main-Is:    main.lhs
Hs-Source-Dirs: src
