Name:		     hscalc
Version:    	     0.4.0
Synopsis:   	     Stack Calculator writen in Haskell 
Description:         Stack Calculator writen in Haskell
License:             GPL-3
License-file:        LICENSE
Author:     	     Luis Cabellos
Maintainer:          zhen.sydow@gmail.com
Copyright:           Luis Cabellos 2011
Category:            Mathematics
Build-type:          Simple
Cabal-version:       >=1.8
Data-files: 	
		data/window.glade
		data/about.glade
Extra-source-files: 
		src/Vista.lhs 
		src/Controller.lhs 
		src/StackCalc.lhs

Executable hscalc
  Hs-Source-Dirs:    src
  Main-is:    	     main.lhs
  Build-Depends:     base -any, gtk >0.9, glade >0.9
  Ghc-options:	     -O3 -Wall

source-repository head
  type: git
  location: https://zhensydow@github.com/zhensydow/hscalc.git
  branch: develop
